--- a/app/styles/global.css
+++ b/app/styles/global.css
@@ -1,3 +1,4 @@
+/* TODO: make fonts cross-platform using https://www.fontsquirrel.com/tools/webfont-generator */
 @font-face {
   font-family: "8-bit Arcade In Medium";
   src: url("../../public/fonts/8-bit-arcade/8-bit\ Arcade\ In.ttf") format("truetype");
